--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ nav ul li a:hover{
 .home-section{
     text-align: center;
     padding: 0 10%;
-    background-image: url("/images/bg-curvy-desktop.svg");
+    background-image: url("images/bg-curvy-desktop.svg");
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -119,7 +119,7 @@ nav ul li a:hover{
 @media only screen and (max-width: 850px){
     .home-section{
         padding: 0 5%;
-        background-image: url('/images/bg-curvy-mobile.svg');
+        background-image: url('images/bg-curvy-mobile.svg');
     }
 
     .home-section .home-content h1{
@@ -428,7 +428,7 @@ footer{
 
   footer ul li{
     color: #ffff;
-    list-style: url("/images/icon-location.svg");
+    list-style: url("images/icon-location.svg");
     list-style-position: outside;
   }
 
